<resources>
    <string name="app_name">Logistics-management-android-native</string>
    <string name="historial_de_rutas">HISTORIAL DE RUTAS</string>
    <string name="rutas_de_hoy">RUTAS DE HOY</string>
    <string name="reservar">Reservar</string>
    <string name="format_uuid">Paquete %s</string>
    <string name="format_estado">%s</string>
    <string name="howToLogin">Ingrese su usuario y contraseña para continuar</string>
    <string name="recover_password">¿NO RECUERDA SU CONTRASEÑA? <font color='#FF0000'>CLICK AQUI</font>.</string>
    <string name="signup_instead">SI NO TIENE CUENTA <font color='#FF0000'>REGISTRESE</font>.</string>
    <string name="howToRegister">Cree su usuario con su email</string>
    <string name="terms">Al crear su cuenta usted esta aceptando nuestros términos y condiciones.</string>
    <string name="login_instead">¿YA TIENE CUENTA? <font color='#FF0000'>CLICK AQUI PARA INGRESAR.</font></string>
    <string name="google_icon">Icon of the company google (a letter G)</string>
    <string name="apple_icon">Logo of the company Apple (A bitten apple)</string>
    <string name="howToRecover">Ingrese el email de su cuenta para recuperar la contraseña.</string>
    <string name="emailSent">Te enviamos un correo con un enlace de confirmacion! Por favor revisa tu bandeja de entrada para continuar.</string>
    <string name="mailCooldown">Un correo de confirmación fue enviado recientemente. Esperá un momento antes de intentar nuevamente.</string>
    <string name="history_routes_uuid">%s</string>
    <string name="history_routes_date">%s</string>
    <string name="history_routes_status">%s</string>
    <string name="all_routes">Todas</string>
    <string name="available">Disponible</string>
    <string name="pending">Pendiente</string>
    <string name="in_progress">En Progreso</string>
    <string name="completed">Completado</string>
    <string name="failed">Fallida</string>
</resources>