<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textId"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/history_routes_uuid"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="40dp"
            android:gravity="end"
            android:text="@string/history_routes_date"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textStatus"
            style="@style/TextRowStatus"
            android:layout_marginStart="12dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/history_routes_status"/>

        <TextView
            android:id="@+id/textCliente"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginStart="40dp"
            android:layout_gravity="end" />
    </LinearLayout>
</LinearLayout>