<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="28dp"
            android:contentDescription="Logo"
            android:src="@drawable/de_remate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DeRemate"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="REGISTRO"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howToRegister"
            android:textSize="14sp"
            android:layout_marginBottom="24dp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Ejemplo@email.com"
                android:background="@drawable/edit_text_background"
                android:inputType="textEmailAddress"
                android:padding="12dp" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="Contraseña"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:id="@+id/eyeIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/eye"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint= "Confirme la contraseña"
                android:background="@drawable/edit_text_background"
                android:inputType="textPassword"
                android:padding="12dp" />

            <ImageButton
                android:id="@+id/eyeIconConfirm"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/eye"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="CREAR CUENTA"
            android:backgroundTint="#FFC107"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginBottom="14dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  or  "
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#000" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/googleButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/alternative_login_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/google_icon"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="Continuar con Google"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/appleButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/alternative_login_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/apple_icon"
                    android:src="@drawable/ic_apple" />

                <TextView
                    android:layout_width="160dp"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="Continuar con Apple"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_instead"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp" />
    </LinearLayout>
</ScrollView>
